--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="head-menu list">
                 <li class="head-menu-list">
-                    <a href="./index.html" class="head-navigation-link link">Studio</a>
+                    <a href="./index.html" class="head-navigation-link active">Studio</a>
                 </li>
                 <li class="head-menu-list">
                     <a href="./portfolio.html" class="head-navigation-link link">Portfolio</a>
@@ -51,7 +51,7 @@
             <h1 class="main-section-heading">
                 Effective Solutions<br />for Your Business
             </h1>
-            <button type="button" class="main-section-btn">
+            <button type="button" class="main-section-btn" data-modal-open>
                 Order Service
             </button>
             </div>
@@ -62,24 +62,52 @@
             <h2 class="visually-hidden">Our advantages</h2>
             <ul class="advantages-section-item list">
                 <li class="advantages-list">
+                    <div class="advantages-icon">
+                        <a href="" class="advantages-link">
+                            <svg class="advantages-svg" width="60" height="60">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </a>
+                    </div>
                     <h3 class="advantages-section-heading">Strategy</h3>
                     <p class="advantages-section-paragraph">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. 
                     </p>
                 </li>
                 <li class="advantages-list">
+                    <div class="advantages-icon">
+                        <a href="" class="advantages-link">
+                            <svg class="advantages-svg" width="60" height="60">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </a>
+                    </div>
                     <h3 class="advantages-section-heading">Punctuality</h3>
                     <p class="advantages-section-paragraph">Bring the key message to the brand's audience 
                         for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li class="advantages-list">
+                    <div class="advantages-icon">
+                        <a href="" class="advantages-link">
+                            <svg class="advantages-svg" width="60" height="60">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </a>
+                    </div>
                     <h3 class="advantages-section-heading">Diligence</h3>
                     <p class="advantages-section-paragraph">Research and confirm brands that present the strongest 
                         digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="advantages-list">
+                    <div class="advantages-icon">
+                        <a href="" class="advantages-link">
+                            <svg class="advantages-svg" width="60" height="60">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </a>
+                    </div>
                     <h3 class="advantages-section-heading">Technologies</h3>
                     <p class="advantages-section-paragraph">Design practice focused on digital experiences. 
                         We bring forth a deep passion for problem-solving.
@@ -127,6 +155,36 @@
                     <div class="team-member">
                     <h3 class="team-member-heading">Mark Guerrero</h3>
                     <p class="team-member-paragraph">Product Designer</p>
+                    <ul class="social-media list">
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-insta"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-link">
@@ -137,6 +195,36 @@
                     <div class="team-member">
                     <h3 class="team-member-heading">Tom Ford</h3>
                     <p class="team-member-paragraph">Frontend Developer</p>
+                    <ul class="social-media list">
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-insta"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-link">
@@ -147,6 +235,36 @@
                     <div class="team-member">
                     <h3 class="team-member-heading">Camila Garcia</h3>
                     <p class="team-member-paragraph">Marketing</p>
+                    <ul class="social-media list">
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-insta"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>  
                 </li>
                 <li class="team-link">
@@ -157,23 +275,149 @@
                     <div class="team-member">
                     <h3 class="team-member-heading">Daniel Wilson</h3>
                     <p class="team-member-paragraph">UI Designer</p>
+                    <ul class="social-media list">
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-insta"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-media-list">
+                            <a class="social-media-link link">
+                                <svg class="social-media-svg" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 </li>
             </ul>
+            </div>
+        </section>
+        <!--Section4-->
+        <section class="customers-section">
+            <div class="customers-container container">
+                <h2 class="customers-heading">Customers</h2>
+                <ul class="customers-list list">
+                    <li class="customers-item">
+                        <a class="customers-link link">
+                            <svg class="customers-svg">
+                                <use href="./images/icons.svg#icon-Logo1" width="104" height="56"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link">
+                            <svg class="customers-svg">
+                                <use href="./images/icons.svg#icon-Logo2" width="104" height="56"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link">
+                            <svg class="customers-svg">
+                                <use href="./images/icons.svg#icon-Logo3" width="104" height="56"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link">
+                            <svg class="customers-svg">
+                                <use href="./images/icons.svg#icon-Logo4" width="104" height="56"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link">
+                            <svg class="customers-svg">
+                                <use href="./images/icons.svg#icon-Logo5" width="104" height="56"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="customers-link link">
+                            <svg class="customers-svg">
+                                <use href="./images/icons.svg#icon-Logo6" width="104" height="56"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
         <!--Footer--> 
     <footer class="footer">
         <div class="footer-container container">
-        <a href="./index.html" class="footer-logo link">
-            Web<span class="footer-logo-link">Studio</span>
-        </a>
-        <p class="footer-paragraph">
-            Increase the flow of customers and sales for your business 
-            with digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+            <a href="./index.html" class="footer-logo link">
+                Web<span class="footer-logo-link">Studio</span>
+            </a>
+            <p class="footer-paragraph">
+                Increase the flow of customers and sales for your business 
+                with digital marketing & growth solutions.
+            </p>
+        </div>
+        <div class="footer-social">
+            <p class="footer-social-paragraph">Social media</p>
+            <ul class="footer-social-media list">
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-insta"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
         </div>
     </footer>
+    <!----------Modal------------>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-btn" data-modal-close>
+                <svg class="close-svg" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
