--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                     <a href="./index.html" class="head-navigation-link link">Studio</a>
                 </li>
                 <li class="head-menu-list">
-                    <a href="./portfolio.html" class="head-navigation-link link">Portfolio</a>
+                    <a href="./portfolio.html" class="head-navigation-link active">Portfolio</a>
                 </li>
                 <li class="head-menu-list">
                     <a href="" class="head-navigation-link link">Contacts</a>
@@ -68,11 +68,19 @@
                 </ul>
             <ul class="portfolio-list list">
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/bank-app.jpg" 
                         width="360"
                         height="300"
                         alt="banking app">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </p>
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Banking App Interface Concept</h2>
                         <p class="portfolio-paragraph">App</p>
@@ -80,11 +88,19 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/payment.jpg" 
                         width="360"
                         height="300"
                         alt="payment">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </p>
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Cashless Payment</h2>
                         <p class="portfolio-paragraph">Marketing</p>
@@ -92,11 +108,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/front.jpg" 
                         width="360"
                         height="300"
                         alt="computer and mobile interface">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Meditation App</h2>
                         <p class="portfolio-paragraph">App</p>
@@ -104,11 +127,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/driver.jpg" 
                         width="360"
                         height="300"
                         alt="driver">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Taxi Service</h2>
                         <p class="portfolio-paragraph">Marketing</p>
@@ -116,11 +146,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/mobile-screen.jpg" 
                         width="360"
                         height="300"
                         alt="mobile screen">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Screen Illustrations</h2>
                         <p class="portfolio-paragraph">Design</p>
@@ -128,11 +165,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/girl.jpg" 
                         width="360"
                         height="300"
                         alt="girl with phone">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Online Courses</h2>
                         <p class="portfolio-paragraph">Marketing</p>
@@ -140,11 +184,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/insta-stories.jpg" 
                         width="360"
                         height="300"
                         alt="instagram stories">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Instagram Stories Concept</h2>
                         <p class="portfolio-paragraph">Design</p>
@@ -152,11 +203,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/shopping.jpg" 
                         width="360"
                         height="300"
                         alt="goods">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Organic Food</h2>
                         <p class="portfolio-paragraph">Web Site</p>
@@ -164,11 +222,18 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="" class="link">
+                    <a href="" class="projects-link link">
+                        <div class="portfolio-overlay">
                         <img src="./images/coffee.jpg" 
                         width="360"
                         height="300"
                         alt="cup of coffee">
+                        <p class="text-overlay">
+                            14 Stylish and User-Friendly App Design Concepts · Task
+                            Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                            App · Cloud Storage App
+                        </div>
+
                         <div class="item-border">
                         <h2 class="portfolio-heading">Fresh Coffee</h2>
                         <p class="portfolio-paragraph">Web Site</p>
@@ -182,13 +247,48 @@
     <!--Footer-->
     <footer class="footer">
         <div class="footer-container container">
-        <a href="./index.html" class="footer-logo link">
-            Web<span class="footer-logo-link">Studio</span>
-        </a>
-        <p class="footer-paragraph">
-            Increase the flow of customers and sales for your business 
-            with digital marketing & growth solutions.
-        </p>
+        <div class="footer-info">
+            <a href="./index.html" class="footer-logo link">
+                Web<span class="footer-logo-link">Studio</span>
+            </a>
+            <p class="footer-paragraph">
+                Increase the flow of customers and sales for your business 
+                with digital marketing & growth solutions.
+            </p>
+        </div>
+        <div class="footer-social">
+            <p class="footer-social-paragraph">Social media</p>
+            <ul class="footer-social-media list">
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-insta"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list">
+                    <a class="footer-social-link link">
+                        <svg class="footer-social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
         </div>
     </footer>
 </body>
