--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                     <a href="./index.html" class="head-navigation-link link">Studio</a>
                 </li>
                 <li class="head-menu-list">
-                    <a href="./portfolio.html" class="head-navigation-link active">Portfolio</a>
+                    <a href="./portfolio.html" class="head-navigation-link link active">Portfolio</a>
                 </li>
                 <li class="head-menu-list">
                     <a href="" class="head-navigation-link link">Contacts</a>
