--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <ul class="head-menu list">
                 <li class="head-menu-list">
-                    <a href="./index.html" class="head-navigation-link active">Studio</a>
+                    <a href="./index.html" class="head-navigation-link link active">Studio</a>
                 </li>
                 <li class="head-menu-list">
                     <a href="./portfolio.html" class="head-navigation-link link">Portfolio</a>
@@ -63,11 +63,9 @@
             <ul class="advantages-section-item list">
                 <li class="advantages-list">
                     <div class="advantages-icon">
-                        <a href="" class="advantages-link">
-                            <svg class="advantages-svg" width="60" height="60">
+                            <svg class="advantages-svg" width="64" height="64">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
-                        </a>
                     </div>
                     <h3 class="advantages-section-heading">Strategy</h3>
                     <p class="advantages-section-paragraph">Our goal is to identify the business
@@ -76,11 +74,9 @@
                 </li>
                 <li class="advantages-list">
                     <div class="advantages-icon">
-                        <a href="" class="advantages-link">
-                            <svg class="advantages-svg" width="60" height="60">
+                            <svg class="advantages-svg" width="64" height="64">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
-                        </a>
                     </div>
                     <h3 class="advantages-section-heading">Punctuality</h3>
                     <p class="advantages-section-paragraph">Bring the key message to the brand's audience 
@@ -89,11 +85,9 @@
                 </li>
                 <li class="advantages-list">
                     <div class="advantages-icon">
-                        <a href="" class="advantages-link">
-                            <svg class="advantages-svg" width="60" height="60">
+                            <svg class="advantages-svg" width="64" height="64">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
-                        </a>
                     </div>
                     <h3 class="advantages-section-heading">Diligence</h3>
                     <p class="advantages-section-paragraph">Research and confirm brands that present the strongest 
@@ -102,11 +96,9 @@
                 </li>
                 <li class="advantages-list">
                     <div class="advantages-icon">
-                        <a href="" class="advantages-link">
-                            <svg class="advantages-svg" width="60" height="60">
+                            <svg class="advantages-svg" width="64" height="64">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
-                        </a>
                     </div>
                     <h3 class="advantages-section-heading">Technologies</h3>
                     <p class="advantages-section-paragraph">Design practice focused on digital experiences. 
@@ -310,50 +302,50 @@
             </ul>
             </div>
         </section>
-        <!--Section4-->
+        <!--Section5-->
         <section class="customers-section">
             <div class="customers-container container">
                 <h2 class="customers-heading">Customers</h2>
                 <ul class="customers-list list">
                     <li class="customers-item">
                         <a class="customers-link link">
-                            <svg class="customers-svg">
-                                <use href="./images/icons.svg#icon-Logo1" width="104" height="56"></use>
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="customers-link link">
-                            <svg class="customers-svg">
-                                <use href="./images/icons.svg#icon-Logo2" width="104" height="56"></use>
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="customers-link link">
-                            <svg class="customers-svg">
-                                <use href="./images/icons.svg#icon-Logo3" width="104" height="56"></use>
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="customers-link link">
-                            <svg class="customers-svg">
-                                <use href="./images/icons.svg#icon-Logo4" width="104" height="56"></use>
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="customers-link link">
-                            <svg class="customers-svg">
-                                <use href="./images/icons.svg#icon-Logo5" width="104" height="56"></use>
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a class="customers-link link">
-                            <svg class="customers-svg">
-                                <use href="./images/icons.svg#icon-Logo6" width="104" height="56"></use>
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo6"></use>
                             </svg>
                         </a>
                     </li>
