--- a/index.html
+++ b/index.html
@@ -149,28 +149,28 @@
                     <p class="team-member-paragraph">Product Designer</p>
                     <ul class="social-media list">
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-insta"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -189,28 +189,28 @@
                     <p class="team-member-paragraph">Frontend Developer</p>
                     <ul class="social-media list">
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-insta"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -229,28 +229,28 @@
                     <p class="team-member-paragraph">Marketing</p>
                     <ul class="social-media list">
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-insta"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -269,28 +269,28 @@
                     <p class="team-member-paragraph">UI Designer</p>
                     <ul class="social-media list">
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-insta"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-media-list">
-                            <a class="social-media-link link">
+                            <a href="" class="social-media-link link">
                                 <svg class="social-media-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
@@ -308,42 +308,42 @@
                 <h2 class="customers-heading">Customers</h2>
                 <ul class="customers-list list">
                     <li class="customers-item">
-                        <a class="customers-link link">
+                        <a href="" class="customers-link link">
                             <svg class="customers-svg" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Logo1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
-                        <a class="customers-link link">
+                        <a href="" class="customers-link link">
                             <svg class="customers-svg" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Logo2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
-                        <a class="customers-link link">
+                        <a href="" class="customers-link link">
                             <svg class="customers-svg" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Logo3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
-                        <a class="customers-link link">
+                        <a href="" class="customers-link link">
                             <svg class="customers-svg" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Logo4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
-                        <a class="customers-link link">
+                        <a href="" class="customers-link link">
                             <svg class="customers-svg" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Logo5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
-                        <a class="customers-link link">
+                        <a href="" class="customers-link link">
                             <svg class="customers-svg" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Logo6"></use>
                             </svg>
