--- a/portfolio.html
+++ b/portfolio.html
@@ -260,28 +260,28 @@
             <p class="footer-social-paragraph">Social media</p>
             <ul class="footer-social-media list">
                 <li class="footer-social-list">
-                    <a class="footer-social-link link">
+                    <a href="" class="footer-social-link link">
                         <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-insta"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-social-list">
-                    <a class="footer-social-link link">
+                    <a href="" class="footer-social-link link">
                         <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-social-list">
-                    <a class="footer-social-link link">
+                    <a href="" class="footer-social-link link">
                         <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-social-list">
-                    <a class="footer-social-link link">
+                    <a href="" class="footer-social-link link">
                         <svg class="footer-social-svg" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
